objects/CORE_Address__c.object
<CustomObject>
    <fields>
        <fullName>Block_Number__c</fullName>
        <label>Block Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Door_Number_Char__c</fullName>
        <label>Door Number Char</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Scope__c</fullName>
        <label>In Scope</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Land_Use_Code__c</fullName>
        <label>Land Use Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostCode__c</fullName>
        <label>PostCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSBU__c</fullName>
        <label>SSBU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Section_Number__c</fullName>
        <label>Section Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <description>Unit Number + Street Number + Door Number + Road Name</description>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Name__c</fullName>
        <label>Street Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Number__c</fullName>
        <label>Street Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suburb_Id__c</fullName>
        <label>Suburb Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Suburb_Name__c</fullName>
        <label>Suburb Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Id__c</fullName>
        <label>Unit Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Number_Char__c</fullName>
        <label>Unit Number Char</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Number__c</fullName>
        <label>Unit Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>CORE Address</label>
    <nameField>
        <label>Core Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CORE Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PostCode__c</columns>
        <columns>Section_Number__c</columns>
        <columns>SSBU__c</columns>
        <columns>Street_Address__c</columns>
        <columns>Street_Name__c</columns>
        <columns>Street_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <validationRules>
        <fullName>Test_validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Street_Address__c)</errorConditionFormula>
        <errorMessage>Enter Street address</errorMessage>
    </validationRules>
</CustomObject>